<resources>
    <string name="app_name">GitRepos</string>
    <string name="title_home">Home</string>
    <string name="title_saved_list">Repos</string>
    <string name="title_settings">Settings</string>
    <string name="title_details">Details</string>
    <string name="message_internet_unavailable">Internet not available</string>
    <string name="message_error_fetching_data">Error occurred while fetching data</string>
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="label_lang">Language</string>
    <string name="label_repo_title">Repository</string>
    <string name="label_owner">Owner</string>
    <string name="label_desc">Description</string>
    <string name="label_language">Language</string>
    <string name="lang">Language</string>
    <string name="save">Save</string>
    <string name="msg_repo_saved">Repository saved</string>
    <string name="msg_unable_to_save_repo">Repository already saved / Unable to save</string>
    <string name="user">User</string>
    <string name="unknown">Unknown</string>
    <string name="biometric_title">Biometric login</string>
    <string name="biometric_summary_on">Enabled</string>
    <string name="biometric_summary_off">Disabled</string>
    <string name="logout_title">Logout</string>
    <string name="message_logout_success">Logged out successfully</string>
    <string name="label_authenticate">Authenticate</string>
    <string name="label_app_requires_bio_auth">App requires fingerprint authentication</string>
    <string name="label_app_security_requires_auth">Your information is secured and needs fingerprint authentication to access it</string>
    <string name="label_cancel">Cancel</string>

    <string name="label_use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="msg_register_fingerprint">
        Go to \'Settings -> Security -> Fingerprint\' and register at least one fingerprint
    </string>
    <string name="msg_setup_lock_screen">
        Secure lock screen hasn\'t set been up.\n
        Go to \'Settings -> Security -> Fingerprint\' to set up a fingerprint or face
    </string>
    <string name="msg_new_fingerprint_enrolled">
        A new fingerprint was added to this device, your saved app data is wiped out.
    </string>
    <string name="msg_fingerprint_hardware_unavailable">Fingerprint hardware is currently not available to use</string>
    <string name="msg_no_fp_sensor_on_device">Fingerprint hardware doesn\'t exists on device</string>
    <string name="logged_in_title">LoggedIn as</string>
    <string name="label_ok">OK</string>
    <string name="title_biometric_altered">Fingerprints Altered</string>
    <string name="message_no_fp_enrolled">No biometric enrolled,your saved app data is wiped out.</string>
    <string name="message_logout_restricted">Logut temporarily disabled</string>
    <string name="search_hint">Git repository</string>
    <string name="default_search_repo">Android</string>
    <string name="label_stars">Stars</string>
    <string name="label_forks">Forks</string>
    <string name="label_home_page">Home page</string>
    <string name="label_not_available">N.A</string>
    <string name="msg_repo_updates_available">Repository updates are available, please update your store data.</string>
    <string name="title_updates">Updates available</string>
    <string name="msg_setup_fingerprints">Fingerprints are not enrolled on device, please enroll the fingerprints first</string>
    <string name="msg_enable_fp_auth">Plese enable biometric authetication from app settings first</string>
    <string name="msg_auth_first">Please do finger prints authention first.</string>
</resources>
