<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gitrepos.android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_detailsFragment"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gitrepos.android.ui.dashboard.ReposFragment"
        android:label="@string/title_saved_list"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gitrepos.android.ui.settings.SettingFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.gitrepos.android.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="RepoDetailsArgs"
            app:argType="com.gitrepos.android.ui.home.model.Repo" />
    </fragment>

</navigation>